<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dialog_rating"
    android:gravity="center|top"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="235dp"
        android:layout_height="53dp"
        android:layout_marginTop="29dp"
        android:fontFamily="@font/san_francisco_bold"
        android:gravity="center"
        android:maxLines="2"
        android:minLines="2"
        android:text="@string/dialog_title_rate"
        android:textColor="@color/dialog_rate_color_text"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="6dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="2dp">

            <CheckBox
                android:id="@+id/cb_rubbish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_rubbish" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_weight="1"
                android:fontFamily="@font/san_francisco_medium"
                android:gravity="center"
                android:text="@string/dialog_rubbish_rate"
                android:textColor="@color/dialog_rate_color_text"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="2dp">

            <CheckBox
                android:id="@+id/cb_bad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_bad" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_weight="1"
                android:fontFamily="@font/san_francisco_medium"
                android:gravity="center"
                android:text="@string/dialog_bad_rate"
                android:textColor="@color/dialog_rate_color_text"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="2dp">

            <CheckBox
                android:id="@+id/cb_okay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_okay" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_weight="1"
                android:fontFamily="@font/san_francisco_medium"
                android:gravity="center"
                android:text="@string/dialog_okay_rate"
                android:textColor="@color/dialog_rate_color_text"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="2dp">

            <CheckBox
                android:id="@+id/cb_good"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_good" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_weight="1"
                android:fontFamily="@font/san_francisco_medium"
                android:gravity="center"
                android:text="@string/dialog_good_rate"
                android:textColor="@color/dialog_rate_color_text"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="2dp">

            <CheckBox
                android:id="@+id/cb_great"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_great" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_weight="1"
                android:fontFamily="@font/san_francisco_medium"
                android:gravity="center"
                android:text="@string/dialog_great_rate"
                android:textColor="@color/dialog_rate_color_text"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txt_rating_now"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/san_francisco_medium"
        android:background="@drawable/btn_rating"
        android:text="@string/dialog_btn_rating_now"
        android:textColor="@drawable/text_link_selector"
        android:gravity="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_no_rating"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_rating"
        android:fontFamily="@font/san_francisco_medium"
        android:text="@string/dialog_btn_no_rating"
        android:textColor="@drawable/text_link_selector"
        android:gravity="center"
        android:textSize="18sp" />
</LinearLayout>